--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@neondatabase/serverless": "^1.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
