feat(): Changed styling to neobrutalism, added a bunch of components, added github icon, added the first Form

--- a/tasks/tasks.json
+++ b/tasks/tasks.json
@@ -291,7 +291,7 @@
       "description": "Ensure the theme toggle button functions correctly and is visually consistent across both mobile and desktop navigation bars.",
       "details": "Audit the current theme toggle button implementation to identify and resolve any issues with toggling between light and dark modes, ensuring the state is correctly managed and persists across sessions (e.g., using localStorage). Refactor the toggle button component to use accessible markup (e.g., labeled checkbox or button) and ensure it triggers theme changes reliably. Update and unify the styling for the toggle button so it matches the design system and looks polished on both mobile and desktop navigation bars. Use responsive CSS and test with various screen sizes to guarantee proper alignment, spacing, and touch targets. Consider using SVG icons (e.g., sun/moon) for visual feedback, and ensure transitions are smooth. Verify that the toggle is accessible via keyboard and screen readers.",
       "testStrategy": "Manually test the toggle button on both mobile and desktop views to confirm it switches themes as expected and persists the user's choice after reloads. Check that the button is styled consistently and remains accessible and usable at all viewport sizes. Use browser dev tools to simulate mobile devices and test touch interactions. Validate keyboard navigation and screen reader accessibility. Perform cross-browser testing to ensure consistent appearance and functionality. Optionally, write unit tests for the toggle logic and integration tests for theme persistence.",
-      "status": "pending",
+      "status": "done",
       "dependencies": [],
       "priority": "high",
       "subtasks": [
@@ -301,7 +301,7 @@
           "description": "Review the existing theme toggle button code and behavior to identify issues with toggling, state management, accessibility, and visual consistency across mobile and desktop navigation bars.",
           "dependencies": [],
           "details": "Inspect the toggle button's logic for switching themes, how it stores and retrieves the theme state (e.g., localStorage), and its markup for accessibility. Document any inconsistencies or bugs, and note differences in appearance or behavior between mobile and desktop views.",
-          "status": "pending",
+          "status": "done",
           "testStrategy": "Manually test the toggle on both navigation bars, switching themes and reloading the page to check persistence. Use browser dev tools to simulate different screen sizes."
         },
         {
@@ -312,7 +312,7 @@
             1
           ],
           "details": "Implement a robust toggle handler that updates the theme both in memory and in the DOM, and saves the preference in localStorage. Add event listeners to detect system theme changes and update the UI accordingly. Ensure the theme preference cascade is: localStorage > system setting > default.",
-          "status": "pending",
+          "status": "done",
           "testStrategy": "Test toggling themes, reloading the page, and changing system theme settings to verify correct behavior and persistence."
         },
         {
@@ -323,7 +323,7 @@
             2
           ],
           "details": "Use semantic HTML elements (e.g., <button> with aria-label or <input type='checkbox'> with a label). Ensure focus indicators are visible and ARIA attributes are set for screen reader compatibility. Add keyboard event handling for accessibility.",
-          "status": "pending",
+          "status": "done",
           "testStrategy": "Use keyboard navigation and screen readers to verify the toggle is accessible and properly announced."
         },
         {
@@ -334,7 +334,7 @@
             3
           ],
           "details": "Apply responsive CSS for alignment, spacing, and touch targets (minimum 44x44px). Use SVG icons (e.g., sun/moon) for visual feedback and smooth transitions. Ensure the button looks polished and consistent in both navigation contexts.",
-          "status": "pending",
+          "status": "done",
           "testStrategy": "Test on various screen sizes and devices, checking alignment, touch area, and visual consistency."
         },
         {
@@ -345,10 +345,21 @@
             4
           ],
           "details": "Test the toggle on both mobile and desktop, with different themes, and using assistive technologies. Validate keyboard navigation, screen reader output, and responsive behavior. Address any remaining issues.",
-          "status": "pending",
+          "status": "done",
           "testStrategy": "Conduct manual and automated accessibility tests, cross-device/browser checks, and user acceptance testing."
         }
       ]
+    },
+    {
+      "id": 14,
+      "title": "Apply Neobrutalism Design Style Across UI Components",
+      "description": "Redesign all UI components and styles to reflect neobrutalism principles, using inspiration and templates from neobrutalism.dev. Ensure the updated design features bold colors, strong borders, playful shapes, and other key neobrutalism elements.",
+      "details": "Review the templates and best practices from https://www.neobrutalism.dev/templates to understand the core visual language of neobrutalism. Update the project's UI components to incorporate bold, vibrant color palettes, thick and high-contrast borders, playful and unconventional shapes, and strong, loud typography. Emphasize contrast and visual focal points using color, size, and texture. Add depth and tactile feel through shadows and layering, but maintain overall simplicity and clarity to avoid clutter. Remove unnecessary embellishments and ensure all elements serve a functional purpose. Prioritize readability and accessibility throughout the redesign. Reference real-world examples and guidelines from design resources to ensure authenticity and consistency with neobrutalism principles.",
+      "testStrategy": "Manually review all updated UI components to confirm the presence of neobrutalism features: bold colors, strong borders, playful shapes, and expressive typography. Compare the implementation against templates from neobrutalism.dev and other referenced resources. Validate that the design maintains clarity, readability, and accessibility. Conduct cross-device and cross-browser testing to ensure visual consistency. Solicit feedback from team members to verify the design aligns with neobrutalism best practices and project requirements.",
+      "status": "pending",
+      "dependencies": [],
+      "priority": "medium",
+      "subtasks": []
     }
   ]
 }
